fix: adjust margin-top for h1 in authentication styles for better spacing

--- a/Styles/appStyles/auth/auth.module.scss
+++ b/Styles/appStyles/auth/auth.module.scss
@@ -33,7 +33,7 @@
     text-align: center;
 
     h1 {
-        margin-top: 15px;
+        margin-top: 35px;
         font-size: 2rem;
         color: #374151;
         font-weight: 600;
